Fix bug where map overflowed left panel padding

--- a/styles.css
+++ b/styles.css
@@ -5,66 +5,106 @@
 }
 
 html, body {
+    display: flex;
+    flex-direction: column;
     height: 100%;
     width: 100%;
-    min-width: 600px; /* Minimum width */
-    min-height: 400px; /* Minimum height */
-    display: flex;
+    min-width: 600px; 
+    min-height: 400px; 
+    background-color:rgb(67, 106, 223);
+}
 
-    /* overflow: hidden; */
+header {
+    display: flex;
+    align-items: center;
+    margin: 0 42px;
+    padding: 10px 0;
+    background-color:rgb(67, 106, 223);
+}
+
+h1 {
+   flex: 3;
+   flex-shrink: 0;
+}
+
+h2 {
+    flex: 5;
+    text-align: center;
+    flex-shrink: 0;
+
+}
+
+
+#main {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    min-width: 600px;
+    min-height: 400px;
 }
 
 .side {
     flex-grow: 1;
     flex-shrink: 10;
     flex-basis: 100px;
-    background-color: aquamarine;
+    background-color:rgb(241, 241, 241);
 }
 
 #content {
     flex-grow: 2;
     flex-shrink: 1;
     display: flex;
+    justify-content: center;
     height: 100%;
     width: 100%;
-    /* margin: 0 20px; */
+
 }
 
 #leftPanel {
     display: flex;
     flex-direction: column;
-    flex: 3;
 
-    max-width: 512px;
+    max-width: 637px;
     min-width: 200px;
     min-height: 200px;
 
-    height: 100vh;
-    /* position: relative; */
+    width: 35%;
+    height: 100%;
+    
     background-color: #f8f8f8;
     padding: 20px;
     overflow: hidden;
+    align-items: stretch;
+    
 }
 
 #map {
-    flex: 1 1 auto;
-
-    min-height: 200px;
-    max-height: 512px;
+    width: 100%;
+    /* aspect-ratio: 1 / 1; */
+    flex: 8 1 auto;
+    min-height: 170px;
+    max-height: 600px;
+    max-width: 600px;
     background-color: #ddd; 
+    align-self: center;
+    margin-bottom: 20px;
 }
 
-#options {
+#optionsContainer {
     display: flex;
     flex-direction: column;
     flex: 1 0 auto;
     min-height: 149px;
+    width: 100%;
 }
 
 #searchContainer {
     display: flex;
     min-width: 0;
     flex-flow: row wrap;
+    margin-bottom: 10px;    
+    gap: 10px;
+
 }
 
 #currentLatitude,
@@ -72,6 +112,7 @@ html, body {
     padding: 10px;
     flex-grow: 1;
 }
+
 #currentLatitude:focus,
 #currentLongitude:focus {
     outline: none;
@@ -85,19 +126,51 @@ html, body {
 
 #locateMe {
     align-self: center;
+    padding: 0 10px;
+    margin-bottom: 20px;
+}
+
+#radiusContainer {
+    margin-bottom: 20px;
+}
+
+#radiusContainer h4{
+    margin-bottom: 10px;
+}
+
+#radiusContainer div{
+    display: flex;
+    align-items: center;
+}
+
+#radiusSlider {
+    margin-right: 10px;
+}
+
+#minimumRatingContainer {
+    margin-bottom: 20px;
+}
+
+#minimumRatingContainer h4 {
+    margin-bottom: 10px;
+}
+
+#orderByContainer {
+    margin-bottom: 20px;
+}
+#orderByContainer h4 {
+    margin-bottom: 10px;
 }
 
 #rightPanel {
-    flex: 5; /* Make sure the right panel grows more compared to the left panel */
     overflow-y: auto;
     padding: 20px;
-    height: 100%;
-
+    background-color: white;
+    width: 65%;
 }
 
-/* Table styling */
 table {
-    width: 100%;
+    /* width: 100%; */
     table-layout: fixed;
     border-collapse: collapse;
     overflow: scroll;
@@ -172,3 +245,22 @@ td img {
         direction: ltr;
     }
 } */
+
+@media screen and (max-width: 768px) {
+    #leftPanel {
+        display: flex;
+        flex-direction: column;
+    
+        max-width: 637px;
+        min-width: 200px;
+        min-height: 200px;
+    
+        flex: 1;
+        height: 100%;
+        
+
+        
+    }
+    
+
+  }
